--- a/app/src/main/res/layout/exercise_item.xml
+++ b/app/src/main/res/layout/exercise_item.xml
@@ -54,12 +54,28 @@
             android:textStyle="bold"
             tools:ignore="RtlSymmetry" />
 
+        <TextView
+            android:id="@+id/type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="5dp"
+            android:paddingEnd="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_below="@id/minutes"
+            android:text="@string/product_name"
+            android:textColor="@color/green"
+            android:gravity="right"
+            android:textSize="@dimen/titles"
+            android:textStyle="bold"
+            tools:ignore="RtlSymmetry" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="@drawable/rounded_corners"
-            android:layout_below="@id/exercise_title"
+            android:layout_below="@id/type"
             android:layout_margin="10dp"
             android:padding="5dp">
 
@@ -69,7 +85,6 @@
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:gravity="start|top"
-                android:inputType="textMultiLine"
                 android:singleLine="false"
                 android:text="Описание"
                 android:textColor="@color/grey_hint"
