--- a/app/src/main/res/layout/ingredients_of_recipe.xml
+++ b/app/src/main/res/layout/ingredients_of_recipe.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="27dp"
     android:animateLayoutChanges="true"
     android:background="?android:selectableItemBackground">
 
@@ -16,7 +16,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/green_dark"
+        android:textColor="@color/green"
+        android:textStyle="bold"
         tools:text="Ингредиент" />
 
     <TextView
@@ -42,7 +43,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/white"
+        android:textColor="@color/green"
         tools:text="шт." />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
