--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    app:cardBackgroundColor="@color/green"
+    app:cardBackgroundColor="@color/green_light"
     app:cardCornerRadius="@dimen/general_radius_corners"
     app:cardElevation="3dp">
 
@@ -22,7 +22,7 @@
             android:layout_toStartOf="@id/button_delete"
             android:padding="4dp"
             android:text="@string/product_name"
-            android:textColor="@color/green_light"
+            android:textColor="@color/green"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -35,7 +35,7 @@
             android:layout_margin="3dp"
             android:padding="4dp"
             android:text="@string/expiration_date_hint"
-            android:textColor="@color/white"
+            android:textColor="@color/green_dark"
             android:textSize="13sp" />
 
         <TextView
@@ -47,7 +47,7 @@
             android:layout_toStartOf="@id/button_delete"
             android:layout_toEndOf="@id/text_date"
             android:padding="4dp"
-            android:textColor="@color/white"
+            android:textColor="@color/green_dark"
             android:textSize="13sp" />
 
         <ImageView
