--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Diet_application" parent="Theme.MaterialComponents.DayNight">
+    <style name="Theme.Diet_application" parent="Theme.MaterialComponents.Light">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/green_light</item>
         <item name="colorPrimaryVariant">@color/green</item>
